# authorizar

./: Cargo.toml  README.md  env_example  runwatch
data/: result.json
migrations/: 20231107112934_policies.sql  20231107114734_entities.sql  20231108112632_schema.sql
src/: lib.rs  main.rs  server.rs
src/cedar/: api.rs
src/core/: db.rs  error.rs  mod.rs  structs.rs
src/dto/: entities.rs  policies.rs
src/http/: authz.rs
src/routes/: api_error.rs  api_response.rs  app_state.rs  entities_controller.rs  mod.rs  policies_controller.rs
src/utils/: dbpool.rs  env_helper.rs  mod.rs
