[package]
name = "cedar-authorizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0"
cedar-policy = "2.4.2"
serde = { version = "1.0.192", features = [ "derive" ] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
sqlx = { version = "0", features = [ "runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json"] }
tokio = { version = "1.33.0", features = ["full"] }
thiserror = "1"
dotenv = "0.15.0"
once_cell = "1.18.0"
async-trait = "0.1.74"
validator = { version = "0", features = ["derive"] }
log = "0"
env_logger = "0"
anyhow = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0", features = ["serde"] }
[dev-dependencies]
tempfile = "3"